# frame_realtime_gemini_voicevision

./: .gitignore  AGENT_INTEGRATION.md  README.md  pubspec.yaml  pubspec.yaml.backup  setup_codespace_android.sh
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: accept-android-licenses.sh  install_flutter.sh  install_user_sdk.sh  setup_flutter.sh
.github/workflows/: build-demo-apk.yml  flutter_test_pipeline.yml
android/: build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
android/app/: CMakeLists.txt  build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/cognitive_assistant/: MainActivity.kt
assets/: frame_app.min.lua  frame_gemini_audio_integration.dart
frame_realtime_gemini_voicevision/lib/services/: vector_db_service.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: audio_data_extractor.dart  audio_upsampler.dart  foreground_service.dart  gemini_realtime.dart  main.dart  objectbox-model.json  objectbox.g.dart
lib/agent/: agent_architecture.md
lib/agent/core/: agent_core.dart  stream_observer.dart  timestamp_manager.dart
lib/agent/models/: agent_output.dart
lib/agent/services/: agent_vector_service.dart  asr_service.dart  (+2 more)
lib/model/: document_entity.dart
lib/services/: frame_audio_service.dart  frame_audio_streaming_service.dart  frame_gemini_audio_integration.dart  frame_gemini_realtime_integration.dart  local_embedding_service.dart  vector_db_service.dart  vector_db_service.dart.backup
lib/utils/: bert_tokenizer.dart  tensor_utils.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
native_src/: sqlite-vec.c
test/: agent_test.dart  mobilebert_validation.dart  placeholder_test.dart  vector_db_test.dart  widget_test.dart
test/services/: vector_db_service_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+3 files in other folders)
